// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Renders with children 1`] = `
<div>
  <div
    class="layout"
  >
    <main
      class="layout__main"
    >
      <span>
        Child element
      </span>
    </main>
  </div>
</div>
`;

exports[`Layout Renders without children 1`] = `
<div>
  <div
    class="layout"
  >
    <main
      class="layout__main"
    />
  </div>
</div>
`;
